# midi-maker

./: .gitignore  2026-04-02-150153-this-session-is-being-continued-from-a-previous-c.txt  README.md  config.example.json  config.example.yaml  enum_implementation_summary.txt  pyproject.toml
docs/: api-reference.md  usage.md
docs/superpowers/plans/: 2026-04-03-midi-scripter-gui-integration.md
docs/superpowers/specs/: 2026-04-02-midi-maker-cc-automation-framework-design.md  2026-04-03-midi-scripter-gui-integration-design.md
examples/: basic_recording_playback.py  sequencer_integration.py
src/midi_maker/: __init__.py
src/midi_maker/app/: __init__.py  config.py  main.py  midi_scripter_api.py  runtime.py
src/midi_maker/automation/: __init__.py  analyzer.py  library.py  patterns.py
src/midi_maker/core/: __init__.py  enums.py  events.py  exceptions.py
src/midi_maker/gui/: __init__.py  pattern_browser.py  playback_controls.py  recording_panel.py
src/midi_maker/patterns/: __init__.py  sequencer.py  state.py
src/midi_maker/playback/: __init__.py  gates.py  player.py  (+1 more)
tests/: __init__.py  test_enums.py
tests/integration/: test_full_workflow.py  test_midi_scripter_workflow.py
tests/test_app/: test_config.py  test_main.py  test_runtime.py
tests/test_automation/: test_analyzer.py  test_library.py  test_patterns.py
tests/test_core/: test_events.py  test_exceptions.py
tests/test_examples/: test_basic_example.py  test_docs_entrypoints.py  test_sequencer_example.py
tests/test_gui/: fakes.py  test_init.py  test_pattern_browser.py  test_playback_controls.py  test_recording_panel.py
tests/test_patterns/: test_init.py  test_sequencer.py  test_state.py
tests/test_playback/: __init__.py  test_gates.py  test_player.py  test_scheduler.py
tests/test_recording/: test_capture.py  test_recorder.py  test_triggers.py
(+7 files in other folders)
